# BasicsOfProgramminCourse

./: CMakeLists.txt  main.c
libs/data_structures/vector/: vector.c  vector.h
